--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
         <div class="board">
-            <input>
+            <input >
             <div class="btn">
-            <button>AC</button>
-            <button>+/-</button>
+            <button id="btnclear">AC</button>
+            <button id="btnswitch">+/-</button>
             <button>%</button>
-            <button>/</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>*</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
-            <button>0</button>
-            <button>.</button>
-            <button>^</button>
+            <button id="btndivide">/</button>
+            <button id="btn7">7</button>
+            <button id="btn8">8</button>
+            <button id="btn9">9</button>
+            <button id="btnmultiply">*</button>
+            <button id="btn4">4</button>
+            <button id="btn5">5</button>
+            <button id="btn6">6</button>
+            <button id="btnminus">-</button>
+            <button id="btn1">1</button>
+            <button id="btn2">2</button>
+            <button id="btn3">3</button>
+            <button id="btnplus">+</button>
+            <button id="btn0">0</button>
+            <button id="btnpct">.</button>
+            <button id="btnpower">^</button>
             <button>=</button>
         </div>
         </div>
