step 3 done ,need some adjustment

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button id="btn0">0</button>
             <button id="btnpct">.</button>
             <button id="btnpower">^</button>
-            <button>=</button>
+            <button id="btnequal">=</button>
         </div>
         </div>
 
