done with the function need some adjusment

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="btn">
             <button id="btnclear">AC</button>
             <button id="btnswitch">+/-</button>
-            <button>%</button>
+            <button id="btnremind">%</button>
             <button id="btndivide">/</button>
             <button id="btn7">7</button>
             <button id="btn8">8</button>
